--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,10 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+
+    //reflection-based flavor
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-full:1.5.9'
+
+    // reflection-free flavor
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.9'
 }
