--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -15,41 +16,43 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/original_logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/original_logo"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".main.MainActivity"
+            android:name=".main.SplashScreenActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
+            android:launchMode="singleInstance"
+            android:theme="@style/Theme.RemoveSplashScreenTheme"
+            android:noHistory="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
+            android:name=".main.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:name=".auth.AuthActivity" />
-
+            android:theme="@style/SplashTheme" />
         <activity
-            android:screenOrientation="portrait"
-            android:name=".create.CreateActivity" />
-
+            android:name=".auth.AuthActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
-            android:name=".search.SearchActivity" />
-
+            android:name=".create.CreateActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
-            android:name=".scanner.QRScannerActivity" />
+            android:name=".search.SearchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".scanner.QRScannerActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
