rename and change version code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,15 @@ plugins {
 apply plugin: 'kotlin-kapt'
 
 android {
-    namespace 'com.start.dvizk'
+    namespace 'com.start.eventgo'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.start.dvizk"
+        applicationId "com.start.eventgo"
         minSdk 26
         targetSdk 34
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
