--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace 'com.start.eventgo'
@@ -117,6 +118,9 @@ dependencies {
 
     //MaskedEdittext
     implementation 'io.github.vicmikhailau:MaskedEditText:5.0.1'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
 }
 
 ktlint {
