--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,9 @@ dependencies {
     api "com.fasterxml.jackson.core:jackson-databind:2.11.1"
 
     // Glide
-    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.github.bumptech.glide:glide:4.13.0"
     implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
-    kapt "com.github.bumptech.glide:compiler:4.11.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
 
     //kotlin
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
